created training data from scraping and fake

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ opencv-python = "^4.10.0.84"
 pillow = "^11.0.0"
 pyheif = "^0.8.0"
 spacy = "^3.8.2"
+faker = "^30.6.0"
+pandas = "^2.2.3"
 
 
 [build-system]
